<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetalhesActivity"
    tools:showIn="@layout/activity_detalhes">

    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_t_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/description"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_descricao"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_descricao"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/number"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_numero"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_numero"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/height"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_altura"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_altura"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/weight"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_peso"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_peso"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/genre"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_sexo"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_sexo"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/category"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_categoria"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_habilidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_categoria"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/main_skills"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_habilidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_habilidades"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_habilidades"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/kind"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_tipo"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/tv_t_fraquezas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_tipo"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/weakness"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_fraquezas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_t_fraquezas"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>